# ksw2rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  release.sh
benches/: extz2.rs
c/: ksw2_ref_wrapper.c
docs/: PORTING_PLAN.md
src/: aligner.rs  lib.rs
src/extz2/: core.rs  mod.rs
tests/: differential.rs
