[package]
name = "ksw2rs"
version = "0.1.1"
edition = "2024"
authors = ["ksw2rs contributors"]
description = "Native Rust port of ksw2 (ksw2_extz2_sse) with stable-Rust SIMD backends"
license = "BSD-3-Clause"
repository = "https://github.com/COMBINE-lab/ksw2rs"
homepage = "https://github.com/COMBINE-lab/ksw2rs"
readme = "README.md"
keywords = ["bioinformatics", "alignment", "simd", "ksw2", "sequence-alignment"]
categories = ["science", "algorithms"]

[dependencies]

[build-dependencies]
cc = "1"

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "extz2"
harness = false
